@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-06-14T08:10:26Z",
-  "count_outdated" : 1607,
-  "uniques_outdated" : 92,
-  "count" : 1643,
+  "timestamp" : "2022-06-15T00:42:48Z",
+  "count_outdated" : 1611,
+  "uniques_outdated" : 93,
+  "count" : 1645,
   "uniques" : 102,
   "views" : [
-    {
-      "timestamp": "2022-05-31T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 4 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-06-02T00:00:00Z",
       "count": 7,
