@@ -1,12 +1,7 @@
 {
-  "count": 36,
+  "count": 34,
   "uniques": 3,
   "views": [
-    {
-      "timestamp": "2022-05-31T00:00:00Z",
-      "count": 2,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-06-02T00:00:00Z",
       "count": 7,
